<resources>
    <string name="app_name">SISTEMA LOCALES PDM115</string>
    <string name="inicio">INICIO</string>
    <string name="username">usuario</string>
    <string name="password">contraseña</string>
    <string name="login">Entrar</string>
    <string name="inicializar">incializar usuarios</string>
    <string name="salir">salir</string>
    <string name="verUsuarios">ver usuarios</string>
    <string name="lista">lista</string>
    <string name="name">nombre</string>
    <string name="header">Usuarios</string>
    <string name="userNormal">Usuario Normal</string>
    <string name="userAdmin">Administrador</string>
    <string name="agregarU">agregar usuario</string>

    <!-- Docente Strings -->
    <!-- Actualizar -->
    <string name="idDocente">idDocente</string>
    <string name="nombreDoc">nombreDoc</string>
    <string name="idEscuela">idEscuela</string>
    <string name="actualizar">actualizar</string>
    <string name="limpiar">limpiar</string>
    <!-- End of Actualizar -->
    <!-- Consultar -->
    <string name="consultar">consultar</string>
    <!-- end of Consultar -->
    <!-- Insertar -->
    <string name="Escuela">Escuela:</string>
    <string name="opciones">opciones</string>
    <string name="insertar">insertar</string>
    <!-- End of Insertar -->
    <!-- Eliminar -->
    <string name="eliminar">eliminar</string>
    <!-- End of Eliminar -->
    <!-- End of Docente Strings -->

    <!-- Hotario Strings -->
    <string name="formato_fecha">dd/mm/yyyy</string>
    <string name="formato_hora">hh:mm</string>
    <string name="titlulo_pickers">Horario</string>
    <!-- Insertar -->
    <string name="idHorario">idHorario</string>
    <string name="desde">desde</string>
    <string name="hasta">hasta</string>
    <string name="dia">dia</string>
    <!-- End of Insertar -->
    <!-- End of Horario Strings -->

    <!-- Escuela Strings -->
    <string name="nombreEscuela">nombre</string>
    <!-- End of Escuela Strings -->

    <!-- Tipo Actividad Strings -->
    <string name="tipoactividadInsertar">Insertar Tipo Actividad</string>
    <string name="tipoactividadEliminar">Eliminar Tipo Actividad</string>
    <string name="tipoactividadActualizar">Actualizar Tipo Actividad</string>
    <string name="tipoactividadConsultar">Consultar Tipo Actividad</string>
    <string name="idTipoActividad">Id Tipo Actividad</string>
    <string name="nomTipoActividad">nomTipoActividad</string>
    <string name="anio">año</string>
    <string name="idPensum">idPensum</string>
    <!-- End of Tipo Actividad Strings -->

    <!-- Actividad -->
    <string name="actividadInsertar">Insertar Actividad</string>
    <string name="actividadEliminar">Eliminar Actividad</string>
    <string name="actividadActualizar">Actualizar Actividad</string>
    <string name="actividadConsultar">Consultar Actividad</string>
    <string name="nomActividad">nomActividad</string>
    <string name="tipoActividad">tipoActividad</string>
    <string name="idActividad">idActividad</string>
    <!-- End of Actividad -->

    <!-- Carrera -->
    <string name="carreraInsertar">Insertar Carrera</string>
    <string name="carreraEliminar">Eliminar Carrera</string>
    <string name="carreraActualizar">Actualizar Carrera</string>
    <string name="carreraConsultar">Consultar Carrera</string>
    <string name="idCarrera">idCarrera</string>
    <string name="nomCarrera">nomCarrera</string>
    <!-- End of Carrera -->
</resources>
