<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="@string/idHorario"/>
        <EditText
            android:id="@+id/et_id_horario"
            android:inputType="time"
            android:maxLength="7" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/desde" />
        <EditText
            android:id="@+id/et_hora_desde"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/hasta" />
        <EditText
            android:id="@+id/et_hora_hasta"
            android:inputType="time"
            android:maxLength="5" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/dia" />
        <EditText
            android:id="@+id/et_dia"
            android:inputType="time"
            android:maxLength="5" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/opciones" />
    </TableRow>

    <TableRow>
        <Button
            android:onClick="consultarHorario"
            android:text="@string/consultar" />
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>
