<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="@string/idEscuela" />

        <EditText
            android:id="@+id/editIdEscuela"
            android:inputType="time"
            android:maxLength="7" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/idCarrera" />

        <EditText
            android:id="@+id/editIdCarrera"
            android:inputType="time"
            android:maxLength="7" />
    </TableRow>

    <TableRow>
        <TextView android:text="@string/nomCarrera" />

        <EditText
            android:id="@+id/editNomCarrera"
            android:inputType="text"
            android:maxLength="7" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="actualizarCarrera"
            android:text="@string/actualizar" />
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>