<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="@string/idHorario"/>
        <EditText
            android:id="@+id/editIdHorario"
            android:inputType="time"
            android:maxLength="7" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/desde" />
        <EditText
            android:id="@+id/editDesde"
            android:inputType="text"
            android:maxLength="30" />
        <ImageButton
            android:id="@+id/ib_obtener_fecha_desde"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_access_time_black_24dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/hasta" />
        <EditText
            android:id="@+id/editHasta"
            android:inputType="time"
            android:maxLength="5" />
        <ImageButton
            android:id="@+id/ib_obtener_fecha_hasta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_access_time_black_24dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/dia" />
        <EditText
            android:id="@+id/editDia"
            android:inputType="time"
            android:maxLength="5" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/opciones" />
    </TableRow>

    <TableRow>
        <Button
            android:onClick="insertarHorario"
            android:text="@string/insertar" />
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>
