<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idCarrera"/>

    <EditText
        android:id="@+id/editIdCarrera"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:maxLength="7"/>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/botonConsultar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/consultar"
            android:onClick="consultarCarrera"/>

        <Button
            android:id="@+id/botonLimpiar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/limpiar"
            android:onClick="limpiarTexto"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idEscuela" />

    <EditText
        android:id="@+id/editIdEscuela"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:enabled ="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:cursorVisible="false"
        android:longClickable="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nomCarrera" />

    <EditText
        android:id="@+id/editNomCarrera"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:enabled ="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:cursorVisible="false"
        android:longClickable="false" />
</LinearLayout>